--- a/calibration_settings.yaml
+++ b/calibration_settings.yaml
@@ -1,11 +1,12 @@
-camera0: 4
-camera1: 6
-frame_width: 1280
-frame_height: 720
+camera0: 0
+camera1: 1
+zed_camera_id: 0
+frame_width: 2208
+frame_height: 1242
 mono_calibration_frames: 10
 stereo_calibration_frames: 10
 view_resize: 1
-checkerboard_box_size_scale : 3.19
-checkerboard_rows: 4
-checkerboard_columns: 7
+checkerboard_box_size_scale : 1.5
+checkerboard_rows: 7
+checkerboard_columns: 10
 cooldown: 100
